tests/ui/consts/assoc-const-elided-lifetime.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/assoc-const-elided-lifetime.rs:8:20
   |
LL |     const FOO: Foo<'_> = Foo { x: PhantomData::<&()> };
   |                    ^^ expected named lifetime parameter
   |
help: consider using the `'a` lifetime
   |
LL -     const FOO: Foo<'_> = Foo { x: PhantomData::<&()> };
LL +     const FOO: Foo<'a> = Foo { x: PhantomData::<&()> };
   |

error[E0106]: missing lifetime specifier
  --> $DIR/assoc-const-elided-lifetime.rs:11:16
   |
LL |     const BAR: &() = &();
   |                ^ expected named lifetime parameter
   |
help: consider using the `'a` lifetime
   |
LL |     const BAR: &'a () = &();
   |                 ++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0106`.
